file struture NOT DONE

--- a/project4/src/Makefile
+++ b/project4/src/Makefile
@@ -2,12 +2,23 @@
 # or: make ising_para
 # typing "make" in terminal compiles both (same as: make all)
 
+IDIR = ../include
+ODIR = build
 
 CC = mpic++
 COMPILER = g++
 
 CFLAGS1 = -O3 -c
-CFLAGS2 = -c -Wall -larmadillo -O3
+CFLAGS2 = -I$(IDIR) -std=c++11 -Wall -larmadillo -O3
+
+_DEPS = ising_lattice.h
+DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
+
+_OBJ = ising_lattice.o ising_model.o
+OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
+
+$(ODIR)/%.o: %.cpp $(DEPS)
+		$(COMPILER) -c -o $@ $< $(CFLAGS2)
 
 all: para_ising ising_model
 
@@ -17,11 +28,8 @@ para_ising: para_ising.o
 para_ising.o:	para_ising.cpp
 		$(CC) $(CFLAGS1) para_ising.cpp
 
-ising_model: ising_model.o
-		$(COMPILER) -O3 -o ising_model ising_model.cpp
-
-ising_model.o: ising_model.cpp
-		$(COMPILER) $(CFLAGS2) ising_model.cpp
+ising_model: $(OBJ)
+		$(COMPILER) $(CFLAGS1) $@ $<
 
 clean:
 		rm -rf *o ising_model para_ising 
