--- a/project4/src/Makefile
+++ b/project4/src/Makefile
@@ -3,13 +3,13 @@
 # typing "make" in terminal compiles both (same as: make all)
 
 IDIR = ../include
-ODIR = build
+ODIR = ../build
+MPIODIR = $(ODIR)/mpi
 
 CC = mpic++
 COMPILER = g++
 
-CFLAGS1 = -O3 -c
-CFLAGS2 = -I$(IDIR) -std=c++11 -Wall -larmadillo -O3
+CFLAGS = -I$(IDIR) -std=c++11 -Wall -larmadillo -O3
 
 _DEPS = ising_lattice.h
 DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
@@ -17,19 +17,25 @@ DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
 _OBJ = ising_lattice.o ising_model.o
 OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
 
+_MPIOBJ = ising_lattice.o para_ising.o 
+MPIOBJ = $(patsubst %,$(MPIODIR)/%,$(_MPIOBJ))
+
+
 $(ODIR)/%.o: %.cpp $(DEPS)
-		$(COMPILER) -c -o $@ $< $(CFLAGS2)
+		$(COMPILER) -c -o $@ $< $(CFLAGS)
+
+$(MPIODIR)/%.o: %.cpp $(DEPS)
+		$(CC) -c -o $@ $< $(CFLAGS)
+
 
 all: para_ising ising_model
 
-para_ising: para_ising.o
-		$(CC) -O3 -o para_ising para_ising.cpp
+para_ising: $(MPIOBJ)
+		$(CC) -o $@ $^ $(CFLAGS)
 
-para_ising.o:	para_ising.cpp
-		$(CC) $(CFLAGS1) para_ising.cpp
+ising_model: $(OBJ) 
+		$(COMPILER) -o $@ $^ $(CFLAGS) 
 
-ising_model: $(OBJ)
-		$(COMPILER) $(CFLAGS1) $@ $<
 
 clean:
-		rm -rf *o ising_model para_ising 
+		rm -rf $(ODIR)/*.o $(MPIODIR)/*.o ising_model para_ising 
